<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.example.appointment.viewmodel.logIn.Login_Viewmodel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.login.LoginActivity"
        android:background="@color/white">

        <ImageView
            android:id="@+id/title"
            android:layout_width="300dp"
            android:layout_height="220dp"
            android:layout_marginTop="80dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/img_e_um" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:orientation="vertical"
            android:layout_marginTop="60dp"
            android:paddingHorizontal="30dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/themecolor">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_email"
                    android:hint="@string/email"
                    android:textColor="@color/themecolor"
                    android:inputType="textEmailAddress"
                    android:text="@={viewmodel.loginEmail}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/themecolor"
                android:layout_marginTop="10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_password"
                    android:hint="@string/password"
                    android:textColor="@color/themecolor"
                    android:inputType="textPassword"
                    android:text="@={viewmodel.loginPassword}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_login"
                android:background="@drawable/btn_theme"
                android:layout_marginTop="30dp"
                android:text="@string/login"
                android:textColor="@color/themecolor"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textSize="20dp"
                android:onClick="@{()->viewmodel.login()}"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_signup"
                android:background="@drawable/btn_theme"
                android:layout_marginTop="10dp"
                android:text="@string/signup"
                android:textColor="@color/themecolor"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textSize="20dp"
                android:onClick="@{()->viewmodel.changeSignup()}"/>

            <!--<androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_login_google"
                android:background="@drawable/btn_theme"
                android:layout_marginTop="30dp"
                android:text="@string/googlelogin"
                android:textColor="@color/themecolor"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textSize="20dp"
                android:drawableLeft="@drawable/ic_google"
                android:paddingLeft="7dp"
                android:paddingRight="38dp"
                android:onClick="@{(view)->viewmodel.loginGoogle(view)}"
                />-->
        </LinearLayout>
    </RelativeLayout>
</layout>
