<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.example.appointment.main.MainViewmodel" />

    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".main.fragment.profile.Profile_Fragment"
            android:orientation="vertical"
            android:background="@color/white">
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="프로필"
                app:titleTextColor="@color/themecolor"
                android:id="@+id/toolbar" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/themecolor" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RelativeLayout
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_margin="10dp">
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="40dp"
                        android:layout_margin="10dp">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:enabled = "false"
                            android:scaleType="centerCrop"
                            android:src="@drawable/img_basic_profile"
                            android:id="@+id/img_Profile"
                            android:onClick="@{()->viewmodel.fnOpenGallery()}"/>
                    </androidx.cardview.widget.CardView>

                    <RelativeLayout
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:id="@+id/ic_gallery"
                        android:layout_margin="8dp"
                        android:visibility="invisible"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:elevation="8dp">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/btn_round_gray"/>
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_gallert_2"
                            android:layout_margin="8dp"/>

                    </RelativeLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/layout_nickname"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="30dp"
                    android:paddingTop="40dp"
                    android:enabled = "false"
                    android:onClick="@{()->viewmodel.fnNickNameEdit()}">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/text_nickname"
                            android:textSize="32dp"
                            android:textStyle="bold"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:text="@={viewmodel.profileNickname}"/>
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_statusmessage"
                        android:textSize="18dp"
                        android:layout_marginTop="10dp"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:text="@={viewmodel.profileStatusMessage}"/>
                </LinearLayout>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:id="@+id/line_toolbar"
                android:background="@color/themecolor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="20dp"
                    android:paddingLeft="30dp"
                    android:paddingTop="20dp"
                    android:textStyle="bold"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingHorizontal="20dp"
                    android:paddingBottom="10dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#0000ff00"
                        android:inputType="text"
                        android:editable="false"
                        android:focusable="false"
                        android:text="@={viewmodel.profileName}"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textSize="20dp"
                    android:paddingLeft="30dp"
                    android:paddingTop="10dp"
                    android:textStyle="bold"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingHorizontal="20dp"
                    android:paddingBottom="10dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#0000ff00"
                        android:inputType="text"
                        android:editable="false"
                        android:focusable="false"
                        android:text="@={viewmodel.profilePhone}"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="20dp"
                    android:paddingLeft="30dp"
                    android:paddingTop="10dp"
                    android:textStyle="bold"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingHorizontal="20dp"
                    android:paddingBottom="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#0000ff00"
                        android:inputType="text"
                        android:editable="false"
                        android:focusable="false"
                        android:text="@={viewmodel.profileEmail}"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewmodel.fnPasswordEdit()}"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textSize="20dp"
                    android:paddingLeft="30dp"
                    android:paddingTop="10dp"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:paddingHorizontal="20dp"
                        android:paddingBottom="10dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#0000ff00"
                            android:focusable="false"
                            android:inputType="textPassword"
                            android:text="@={viewmodel.profilePassword}"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageButton
                        android:id="@+id/btn_password_edit"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/ic_right"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="30dp"
                        android:visibility="gone"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:onClick="@{()->viewmodel.fnProfileAddressEdit()}">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textSize="20dp"
                    android:paddingLeft="30dp"
                    android:paddingTop="10dp"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:paddingHorizontal="20dp"
                        android:paddingBottom="10dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#0000ff00"
                            android:focusable="false"
                            android:inputType="text"
                            android:text="@={viewmodel.profileAddress}"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageButton
                        android:id="@+id/btn_address_edit"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/ic_right"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="30dp"
                        android:visibility="gone"
                        />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/themecolor" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/logout"
                android:background="#00ff0000"
                android:text="로그아웃"
                android:textSize="16dp"
                android:onClick="@{()->viewmodel.fnLogout()}"/>


            <!--<Button
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/logout"
                android:background="#ff00ff"/>-->

        </LinearLayout>
    </ScrollView>



</layout>